--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #11270d; }
+  background: #095fa5; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #58357c; }
+  background: #6b8310; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #a0232f; }
+  background: #6065f0; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a5e683; }
+  background: #7133b4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #13f869; }
+  background: #e4ce8d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b0c170; }
+  background: #5def87; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #524ed8; }
+  background: #d133bf; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #99ad43; }
+  background: #cf0fef; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #796773; }
+  background: #76d1ea; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #bcd84e; }
+  background: #f009fa; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ff0d20; }
+  background: #c56161; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #75e652; }
+  background: #d058d3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #51b6a6; }
+  background: #3dc4f0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0d4916; }
+  background: #0f9356; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a0c455; }
+  background: #40fd4a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d99514; }
+  background: #f7508b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1b9745; }
+  background: #a25898; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1763f2; }
+  background: #f04117; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #62ea35; }
+  background: #8dbe3e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #82c34a; }
+  background: #6d975c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #205568; }
+  background: #8e896e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #640913; }
+  background: #72efae; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #12ea8c; }
+  background: #5719c2; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #401b6a; }
+  background: #7fb63d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #129a22; }
+  background: #60674a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #128e7d; }
+  background: #90a9af; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #12408d; }
+  background: #38470f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d635e9; }
+  background: #5b9fbd; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c5f11e; }
+  background: #0f986a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a43666; }
+  background: #426d2c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #89ba9f; }
+  background: #d0e458; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b9da6d; }
+  background: #4d3ca7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #88a97d; }
+  background: #cbd561; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f70209; }
+  background: #4dd9a7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7ff291; }
+  background: #a56a69; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #174a91; }
+  background: #d3c992; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #995f7a; }
+  background: #026e12; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #160fe2; }
+  background: #55b18e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #056b05; }
+  background: #9f77b6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9f4281; }
+  background: #eb3c6c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #6fed87; }
+  background: #d01974; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #50a4bc; }
+  background: #d796bb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #32ce58; }
+  background: #d25f0e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #331d42; }
+  background: #dce685; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ec67fb; }
+  background: #b3aacd; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b57c82; }
+  background: #935ee1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c03e88; }
+  background: #3642b6; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #76f220; }
+  background: #91a3b0; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0f8fc1; }
+  background: #6e9530; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #59bbe5; }
+  background: #c3bc40; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2d336b; }
+  background: #7bd73f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f99cf4; }
+  background: #62e04b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f64e04; }
+  background: #d2e512; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3209d4; }
+  background: #4c61e0; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a6b5c2; }
+  background: #4d86fc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3049af; }
+  background: #e4cf37; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a693a1; }
+  background: #4bb658; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a69a0a; }
+  background: #11f983; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0bff49; }
+  background: #b1ec47; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #6a832b; }
+  background: #9979ce; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a67740; }
+  background: #0ddfa5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0e1a2e; }
+  background: #52cb2c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9ff99a; }
+  background: #c71645; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #4d4c13; }
+  background: #b08fbe; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fa69d2; }
+  background: #e4d5d4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #5c7c37; }
+  background: #275155; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #03bb79; }
+  background: #f927ab; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a1db94; }
+  background: #32ec97; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c86f6c; }
+  background: #29444c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #84fffa; }
+  background: #94f263; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #25a6dd; }
+  background: #17913c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #cf9714; }
+  background: #38ea53; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #db6c89; }
+  background: #eaf1fb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #486068; }
+  background: #64f10b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #16f00e; }
+  background: #225a90; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1db058; }
+  background: #57a143; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #11aa23; }
+  background: #aac8fd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #37f41b; }
+  background: #d3df2c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ae789c; }
+  background: #38f6a5; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e36b1e; }
+  background: #47fd10; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #dacd1c; }
+  background: #cd15c8; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #802d2b; }
+  background: #c5fc15; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5cc0c2; }
+  background: #1ef749; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7e50fb; }
+  background: #bb91cb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d3a27f; }
+  background: #be729a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8d558f; }
+  background: #e1d47c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d4acfd; }
+  background: #edd524; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #76be7d; }
+  background: #5cdd87; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e6fe5f; }
+  background: #3107db; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1706b4; }
+  background: #53673c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4f687f; }
+  background: #0d914b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a66704; }
+  background: #bb1aca; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f761c0; }
+  background: #bfdc05; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6e0e66; }
+  background: #7a7a9c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c8b7a9; }
+  background: #3ac860; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ddd78e; }
+  background: #e348ed; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a09d2e; }
+  background: #a33bad; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #85300a; }
+  background: #50ad7c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #2348f2; }
+  background: #02541a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #72a93d; }
+  background: #a9a343; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12536,6 +12536,10 @@ td .check-container {
   position: absolute;
   border-radius: 0px 0px 6px 6px;
   overflow: hidden; }
+
+.field-section {
+  background-color: #f4f4f4;
+  padding: 20px 30px; }
 
 .notifi-scroll {
   height: 390px;
