--- a/backend/scss/_fahad.scss
+++ b/backend/scss/_fahad.scss
@@ -2174,6 +2174,11 @@ td {
   overflow: hidden;
 }
 
+.field-section {
+  background-color: #f4f4f4;
+  padding: 20px 30px;
+}
+
 .notifi-scroll {
   height: 390px;
   overflow-y: auto;
