--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -256,34 +256,42 @@ header {
 
     .active.dashbord-icon {
       background-image: url(../images/Dashboard_on.svg);
+      outline: none;
     }
 
     .active.devices-icon {
       background-image: url(../images/Devices_on.svg);
+      outline: none;
     }
 
     .active.users-icon {
       background-image: url(../images/Users_on.svg);
+      outline: none;
     }
 
     .active.policy-icon {
       background-image: url(../images/Policy-Center_on.svg);
+      outline: none;
     }
 
     .active.reports-icon {
       background-image: url(../images/Connectors_on.svg);
+      outline: none;
     }
 
     .active.connectors-icon {
       background-image: url(../images/Connectors_on.svg);
+      outline: none;
     }
 
     .active.analytic-icon {
       background-image: url(../images/Analytic_on.svg);
+      outline: none;
     }
 
     .active.admin-icon {
       background-image: url(../images/Admin_on.svg);
+      outline: none;
     }
 
 
