--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2386,6 +2386,34 @@ td {
   }
 }
 
+//new css for table in listing page//
+.listing-table {
+  text-align: left;
+  border-spacing: 0 15px !important;
+  // background-color: #ecedf2;
+  border-collapse: separate;
+}
+
+.listing-table tr {
+  border-bottom: 1px solid #ecedf2;
+}
+
+.listing-table tr td {
+  background-color: white;
+}
+
+.listing-table tr td:first-child {
+  border-top-left-radius: 14px;
+  border-bottom-left-radius: 14px;
+  border-left: 0px;
+}
+
+.listing-table tr td:last-child {
+  border-right: 0px;
+  border-top-right-radius: 14px;
+  border-bottom-right-radius: 14px;
+}
+
 .Notification-model-wrapper {
   position: relative;
   height: 310px;
@@ -2438,8 +2466,8 @@ td {
 button:focus,
 input:focus,
 select:focus {
-  outline: 0px dotted !important;
-  outline: 0px auto -webkit-focus-ring-color !important;
+  outline: none !important;
+  outline: none -webkit-focus-ring-color !important;
 }
 
 table .parent-row {
